src/main/resources/terraform/vpc.tf
resource "aws_vpc" "cratekube-vpc" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = "true"
  enable_dns_hostnames = "true"
  enable_classiclink = "false"
  instance_tenancy = "default"

  tags = {
    Name = "cratekube-vpc"
  }
}

resource "aws_subnet" "cratekube-subnet-1" {
  vpc_id = aws_vpc.cratekube-vpc.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone = "us-east-1a"

  tags = {
    Name = "cratekube-subnet-us-east-1"
  }
}
